fixing light/dark mode toggle issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,6 @@
   --title1-color: #2f55bc;
   --title2-color: #38c1da;
   --description: #646464;
-  --toggle-bg: #f0eb9d;
-  --toggle-fg: #ffd000;
   --toggle-img: url('../assets/Light1.png');
   max-height: 100vh;
   margin: 0;
@@ -35,8 +33,6 @@ body {
   --title1-color: #2F94BC;
   --title2-color: #9ADAE5;
   --description: #a7a7a7;
-  --toggle-bg: #283452;
-  --toggle-fg: #00a5ff;  
   --toggle-img: url('../assets/Light5.png');
 }
 /* * { 
